--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -22,6 +22,10 @@
         }
     }
 
+    &__close {
+        display: none;
+    }
+
     &__show-slim {
         display: none;
     }
@@ -57,6 +61,12 @@
 
         &--collapsed {
             transform: translateX(-100%);
+        }
+
+        &__close {
+            position: absolute;
+            top: 1.5rem;
+            right: 1.5rem;
         }
     }
 }
