--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -1,11 +1,19 @@
 @import "bootstrap/variables";
 
-$body-color: #fff; 
+$body-color: $gray-100; 
 
 $sidebar-default-width: 250px;
 $sidebar-slim-width: 60px;
-$sidebar-background: $gray-100;
+$sidebar-slim-submenu-width: 250px;
+$sidebar-background: $white;
 $sidebar-overlay-transition: 300ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
+
+$sidebar-menu-color: $primary;
+$sidebar-menu-highlight-bg: $primary;
+$sidebar-menu-highlight-color: $white;
+$sidebar-slim-submenu-bg: $white;
+$sidebar-slim-submenu-border-radius: 5px;
+$sidebar-slim-submenu-box-shadow: none;
 
 $sidebar-menu-item-padding: (
     top: 0.5rem,
@@ -18,6 +26,12 @@ $sidebar-submenu-item-padding: (
     right: 1rem,
     bottom: 0.5rem,
     left:  2.5rem,
+);
+$sidebar-slim-submenu-item-padding: (
+    top: 0.5rem,
+    right: 1rem,
+    bottom: 0.5rem,
+    left: 1.5rem,
 );
 $sidebar-submenu-nested-offset: 1rem;
 $sidebar-submenu-nested-font-size: 12px;
