--- a/app/components/Avatar/AvatarImage.scss
+++ b/app/components/Avatar/AvatarImage.scss
@@ -11,6 +11,10 @@
 
         img {
             width: 100%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
     }
 
