For now last update of sidebar scroll

--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -21,6 +21,7 @@
         &--fluid {
             flex: 1 1 auto;
             overflow-y: auto;
+            -webkit-overflow-scrolling: touch;
         }
 
         &--cover {
