--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -37,6 +37,8 @@ $sidebar-submenu-nested-offset: 1rem;
 $sidebar-submenu-nested-font-size: 12px;
 
 $navbar-height: 56px;
+$navbar-border-color: $gray-300;
+$navbar-background-color: $white;
 
 /* Avatar Variants Definitions */
 $avatars: (
