--- a/app/styles/_nested-dropdown.scss
+++ b/app/styles/_nested-dropdown.scss
@@ -1,3 +1,6 @@
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/mixins/breakpoints";
+
 .nested-dropdown {
     &__submenu-item {
         position: relative;
@@ -8,7 +11,7 @@
             
             &::after {
                 position: absolute;
-                right: -0.75rem;
+                right: 0.75rem;
                 top: 50%;
                 transform: translateY(-50%);
                 content: "\f105";
@@ -26,9 +29,49 @@
         &__menu.dropdown-menu {
             position: static;
         }
+    }
+}
 
-        &:hover .nested-dropdown__submenu-item__menu {
-            display: block;
+.navbar-expand {
+    @each $breakpoint in map-keys($grid-breakpoints) {
+        $next: breakpoint-next($breakpoint, $grid-breakpoints);
+        $infix: breakpoint-infix($next, $grid-breakpoints);
+
+        &#{$infix} .navbar-nav {
+            @include media-breakpoint-down($breakpoint) {
+                .nested-dropdown__submenu-item {
+                    &:hover,
+                    &:active {
+                        background-color: transparent;
+                    }
+
+                    &--open .nested-dropdown__submenu-item__menu.dropdown-menu {
+                        display: block;
+                    }
+                }
+
+                .nested-dropdown__submenu-item__menu-wrap {
+                    position: static;
+                    padding: 0;
+                }
+
+                .nested-dropdown__submenu-item__menu.dropdown-menu {
+                    border: none;
+                    padding: 0;
+
+                    .dropdown-item {
+                        padding-left: 2rem;
+                    }
+                }
+            }
+
+            @include media-breakpoint-up($next) {
+                .nested-dropdown__submenu-item {
+                    &:hover .nested-dropdown__submenu-item__menu {
+                        display: block;
+                    }
+                }
+            }
         }
     }
 }
