Updated for supportin npm-based styling

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,7 +1,1 @@
-@import "./avatars";
-@import "./layout";
-@import "./sidebar";
-@import "./sidebar-menu";
-@import "./extended-dropdown";
-@import "./fullScreen";
-@import "./nested-dropdown";
+@import '~@owczar/dashboard-style--main/scss/style';
