--- a/app/styles/plugins/_react-toggle.scss
+++ b/app/styles/plugins/_react-toggle.scss
@@ -4,3 +4,14 @@
         font-size: 12px;
     }
 }
+
+.react-toggle-track {
+	background-color: $gray-500 !important;
+}
+.react-toggle-thumb {
+	border: 1px solid $gray-500 !important;	
+}
+
+.react-toggle--checked .react-toggle-track {
+	background-color: $success !important;
+}
