--- a/app/components/FloatGrid/common.scss
+++ b/app/components/FloatGrid/common.scss
@@ -5,19 +5,25 @@
     margin: 0 auto;
 
     &.static {
+        padding-left: $grid-gutter-width / 2;
+        padding-right: $grid-gutter-width / 2;
+        
         @media (min-width: breakpoint-min('sm', $grid-breakpoints)) {
-            width: map-get($grid-breakpoints, 'sm');
+            width: map-get($container-max-widths, 'sm');
         }
         @media (min-width: breakpoint-min('md', $grid-breakpoints)) {
-            width: map-get($grid-breakpoints, 'md');
+            width: map-get($container-max-widths, 'md');
         }
         @media (min-width: breakpoint-min('lg', $grid-breakpoints)) {
-            width: map-get($grid-breakpoints, 'lg');
+            width: map-get($container-max-widths, 'lg');
+        }
+        @media (min-width: breakpoint-min('xl', $grid-breakpoints)) {
+            width: map-get($container-max-widths, 'xl');
         }
     }
 }
 
 .floatCol {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: $grid-gutter-width / 2;
+    padding-right: $grid-gutter-width / 2;
 }
