--- a/app/styles/plugins/_rc-slider.scss
+++ b/app/styles/plugins/_rc-slider.scss
@@ -7,7 +7,7 @@
     }
 
     .rc-slider-dot-active {
-        border-color: $primary;
+        border-color: $primary !important;
     }
 
     .rc-slider-handle {
@@ -20,5 +20,13 @@
         &:hover {
             border-color: darken($primary, 5%);
         }
+    }
+
+    .rc-slider-rail {
+        background-color: $gray-400;
+    }
+    .rc-slider-dot {
+        background-color: $white;
+        border: 2px solid $gray-500;
     }
 }
