Added sidebar disable state on initial load

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,1 +1,10 @@
 @import '~@owczar/dashboard-style--main/scss/style';
+@import './variables.scss';
+
+.sidebar-menu--disabled {
+    .sidebar-menu__entry__link {
+        pointer-events: none;
+        color: $gray-500 !important;
+        background: none !important;
+    }
+}
