Changed modular CSS files to global BEM

--- a/styles/elements/accordion-header.scss
+++ b/styles/elements/accordion-header.scss
@@ -1,6 +1,6 @@
-@import '../../styles/variables';
+@import '../variables';
 
-div.header {
+div.accordion-header {
     background: none;
     border-bottom: none;
     cursor: pointer;
