--- a/app/routes/Interface/DragAndDropElements/components/common.scss
+++ b/app/routes/Interface/DragAndDropElements/components/common.scss
@@ -13,7 +13,14 @@
     border-right: 1px solid transparent !important;
     transition: border-color 200ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
 
+    &:first-child {
+        border-top: 1px solid transparent !important;
+    }
+
     &--dragging {
+        &:first-child {
+            border-top-color: $primary !important;   
+        }
         border-color: $primary !important;
     }
 }
