--- a/styles/pages/interface/drag-and-drop-elements.scss
+++ b/styles/pages/interface/drag-and-drop-elements.scss
@@ -32,14 +32,14 @@
         &--drag-over {
             background-color: lighten($primary, 45%);
         }
-    }
-    
-    .row {
-        transition: border-color 200ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
-        background: $white;
-        
-        &--dragging {
-            border: 1px solid $primary !important;
+
+        &__row {
+            transition: border-color 200ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
+            background: $white;
+            
+            &--dragging {
+                border: 1px solid $primary !important;
+            }
         }
     }
 }
