--- a/styles/pages/dashboards/analytics.scss
+++ b/styles/pages/dashboards/analytics.scss
@@ -1,4 +1,5 @@
 @import "./../../variables";
+@import '~bootstrap/scss/mixins/breakpoints';
 
 .dashboard-analytics {
     .sessions {
@@ -58,5 +59,12 @@
         .sessions-info {
             display: none;
         }
+    }
+}
+
+// Helpers
+@media (min-width: breakpoint-min('md', $grid-breakpoints)) {
+    .w-md-auto {
+        width: auto !important;
     }
 }
