--- a/styles/plugins/_react-bootstrap-table.scss
+++ b/styles/plugins/_react-bootstrap-table.scss
@@ -1,5 +1,7 @@
 /*@import "~react-bootstrap-table-next/dist/react-bootstrap-table2.min.css";*/
 
+@import "./../variables.scss";
+
 .react-bootstrap-table th.sortable {
     white-space: nowrap;
 }
@@ -7,6 +9,14 @@
 .react-bootstrap-table th,
 .react-bootstrap-table td {
     vertical-align: middle !important;
+}
+
+.react-bootstrap-table .table:not(.table-bordered) tbody tr:last-child td {
+    border-bottom: 1px solid $table-border-color;
+}
+
+.react-bootstrap-table-pagination {
+    padding: 0 0.75rem;
 }
 
 .react-bootstrap-table-pagination-list .pagination {
